<resources>
    <string name="app_name">SortGroup Test</string>
    <string name="action_settings">Settings</string>
    <string name="action_generate">Load a new list</string>
    <!-- Settings preference strings-->
    <string name="r_sort_key" translatable="false">sort_r_key</string>
    <string name="g_sort_key" translatable="false">sort_g_key</string>
    <string name="b_sort_key" translatable="false">sort_b_key</string>

    <string name="multiple_of_key" translatable="false">multiple_of</string>
    <string name="display_count_key" translatable="false">items_count_key</string>
    <string name="list_size_key" translatable="false">list_size_key</string>

    <string name="display_count_title">Show first list items</string>
    <string name="multiple_of_title">List colors multiple of</string>
    <string name="list_size_title">List size</string>

    <!-- Default preference values-->
    <string name="multiple_of_default" translatable="false">51</string>
    <string name="display_count_default" translatable="false">9</string>
    <string name="list_size_default" translatable="false">256</string>
    <!--<string name="list_size_default" translatable="false">256000</string>-->



</resources>
